fix alignment between copyright and social links

--- a/src/components/landing-page-components/footer/footer.module.css
+++ b/src/components/landing-page-components/footer/footer.module.css
@@ -46,6 +46,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
   border-top: 1px solid var(--section-outline);
   padding-top: var(--space-xlg);
   gap: var(--space-xlg);
